--- a/src/main/resources/hudson/plugins/openstf/Messages.properties
+++ b/src/main/resources/hudson/plugins/openstf/Messages.properties
@@ -13,6 +13,7 @@ JOB_DESCRIPTION=Use a STF device during build
 INVALID_OS_VERSION=Invalid OS version
 
 # Execution
+CANNOT_GET_HUDSON_INSTANCE=Could not get any hudson instances on this build
 OVERWRITE_ADBKEY_FILE=Overwriting ADB key file at ''{0}''
 ADBKEY_IS_NOT_SET=ADB key file is not set. Skip overwriting
 START_WAITING_STF_DEVICE_RELEASED=Waiting for the STF device to be released...
