add regex value check

--- a/src/main/resources/hudson/plugins/openstf/Messages.properties
+++ b/src/main/resources/hudson/plugins/openstf/Messages.properties
@@ -10,10 +10,12 @@ ADBKEY_FILE_WILL_BE_OVERWRITTEN=ADB Key files (in: <JENKINS_USER_HOME>/.android/
 
 # Job config
 JOB_DESCRIPTION=Use a STF device during build
+INVALID_REGEXP_VALUE=Invalid Regex value
 INVALID_OS_VERSION=Invalid OS version
 
 # Execution
 CANNOT_GET_HUDSON_INSTANCE=Could not get any hudson instances on this build
+INVALID_DEVICE_CONDITION_SET_IS_GIVEN=Invalid device condition set was given. Please check your job setting.
 OVERWRITE_ADBKEY_FILE=Overwriting ADB key file at ''{0}''
 ADBKEY_IS_NOT_SET=ADB key file is not set. Skip overwriting
 START_WAITING_STF_DEVICE_RELEASED=Waiting for the STF device to be released...
