--- a/src/main/resources/hudson/plugins/openstf/Messages.properties
+++ b/src/main/resources/hudson/plugins/openstf/Messages.properties
@@ -2,6 +2,7 @@
 MALFORMED_STF_API_ENDPOINT_URL=STF API endpoint URL is malformed
 INVALID_STF_API_ENDPOINT_URL=URL seems not valid as the STF API endpoint
 CANNOT_RESOLVE_HOST=Cannot resolve this host name
+CONNECTION_TIMEOUT=Connection time out.
 STF_API_ENDPOINT_NOT_SET=Please set STF API endpoint URL first
 STF_TOKEN_REQUIRED=STF token is required
 STF_TOKEN_NOT_VALID=STF token is not valid
@@ -15,6 +16,8 @@ INVALID_REGEXP_VALUE=Invalid Regex value
 # Execution
 CANNOT_GET_HUDSON_INSTANCE=Could not get any hudson instances on this build
 INVALID_DEVICE_CONDITION_SET_IS_GIVEN=Invalid device condition set was given. Please check your job setting.
+API_ENDPOINT_URL_NOT_SET=The STF API Endpoint URL has not been set.
+ERROR_MISCONFIGURED=Cannot use the Open STF due to misconfiguration: {0}
 OVERWRITE_ADBKEY_FILE=Overwriting ADB key file at ''{0}''
 ADBKEY_IS_NOT_SET=ADB key file is not set. Skip overwriting
 START_WAITING_STF_DEVICE_RELEASED=Waiting for the STF device to be released...
