--- a/src/main/resources/hudson/plugins/openstf/Messages.properties
+++ b/src/main/resources/hudson/plugins/openstf/Messages.properties
@@ -18,6 +18,7 @@ CANNOT_GET_HUDSON_INSTANCE=Could not get any hudson instances on this build
 INVALID_DEVICE_CONDITION_SET_IS_GIVEN=Invalid device condition set was given. Please check your job setting.
 API_ENDPOINT_URL_NOT_SET=The STF API Endpoint URL has not been set.
 ERROR_MISCONFIGURED=Cannot use the Open STF due to misconfiguration: {0}
+SHOW_RESERVER_DEVICE_INFO=Reserved Device Info:\n  Name: {0}\n  Serial: {1}\n  API Level:{2}\n  OS Version: {3}
 OVERWRITE_ADBKEY_FILE=Overwriting ADB key file at ''{0}''
 ADBKEY_IS_NOT_SET=ADB key file is not set. Skip overwriting
 START_WAITING_STF_DEVICE_RELEASED=Waiting for the STF device to be released...
