--- a/src/main/resources/hudson/plugins/openstf/Messages.properties
+++ b/src/main/resources/hudson/plugins/openstf/Messages.properties
@@ -18,7 +18,7 @@ CANNOT_GET_HUDSON_INSTANCE=Could not get any hudson instances on this build
 INVALID_DEVICE_CONDITION_SET_IS_GIVEN=Invalid device condition set was given. Please check your job setting.
 API_ENDPOINT_URL_NOT_SET=The STF API Endpoint URL has not been set.
 ERROR_MISCONFIGURED=Cannot use the Open STF due to misconfiguration: {0}
-SHOW_RESERVER_DEVICE_INFO=Reserved Device Info:\n  Name: {0}\n  Serial: {1}\n  API Level:{2}\n  OS Version: {3}
+SHOW_RESERVED_DEVICE_INFO=Reserved Device Info:\n  Name: {0}\n  Serial: {1}\n  API Level:{2}\n  OS Version: {3}
 OVERWRITE_ADBKEY_FILE=Overwriting ADB key file at ''{0}''
 ADBKEY_IS_NOT_SET=ADB key file is not set. Skip overwriting
 START_WAITING_STF_DEVICE_RELEASED=Waiting for the STF device to be released...
@@ -28,3 +28,7 @@ CONNECTING_STF_DEVICE_FAILED=Connecting to the STF divice is failed
 CANNOT_GET_WORKSPACE_ON_THIS_BUILD=Could not get workspace directory on this build
 INTERRUPTED_DURING_STF_DEVICE_CONNECT_COMPLETION=Interrupted while waiting for the connection to the STF device to complete
 COULD_NOT_CHECK_STF_DEVICE_CONNECT_COMPLETION=Could not check for the STF device connect completion
+
+# Publish
+
+PUBLISH_RESERVED_DEVICE_INFO=Built with "{0}" (API Level={1}, OS Version={2})
